name:                textwrap
version:             0.9.0.0
synopsis:            Simple textwraping library
description:         Please see README.md
homepage:            https://github.com/Hrothen/textwrap#readme
license:             BSD3
license-file:        LICENSE
author:              Leif Grele
maintainer:          lgrele+textwrap@gmail.com
copyright:           2016-2017 Leif Grele
category:            Data, Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Text.Wrap,
                       Data.Text.Wrap.Internal.Tokens
  build-depends:       base >= 4.7 && < 5,
                       text >= 0.9.1.0,
                       text-icu >= 0.7.0.1
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite textwrap-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             external/Spec.hs
  build-depends:       base,
                       textwrap,
                       text,
                       interpolatedstring-perl6,
                       hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Hrothen/textwrap
